fix: prevent text flicker

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,14 +20,14 @@
   src: url("/fonts/atkinson-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 @font-face {
   font-family: "Atkinson";
   src: url("/fonts/atkinson-bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 body {
   font-family: "Atkinson", sans-serif;
